поправил ошибки в бэке и фронте
